# ai-agent-research

./: .gitignore  README.md
agentic-crawl/: .env.template  README.md  crew.py  main.py  requirements.txt
agentic-crawl/config/: agents.yaml  tasks.yaml
agentic-crawl/src/: __init__.py  app.py  crawl_agent.py  crew_handler.py  main.py  run.py
agentic-crawl/src/static/: __init__.py  index.html
agentic-crawl/tools/: custom_tool.py
agentic-rag/: .env.template  README.md  main.py  requirements.txt  research_result_20250217_124717.txt  research_result_docling_20250217_135344.txt  research_result_pdfsearch_20250217_135225.txt
code-agent/: .env.template  README.md  main.py  requirements.txt
crewai-deepresearch/: .env.example  .gitignore  README.md  pyproject.toml
crewai-deepresearch/src/: app.py  deep_research_agent.py  run.py
crewai-deepresearch/src/config/: agents.yaml  deep_research_agents.yaml  deep_research_tasks.yaml  tasks.yaml
crewai-deepresearch/src/static/: index.html
crewai-process-type/: .env.template  README.md  main.py  requirements.txt  research_results_20250215_195508.txt
